# SolanaSCM

./: Anchor.toml
programs/solana-scm/: Cargo.toml
programs/solana-scm/src/: lib.rs
tests/: Cargo.toml
tests/src/: test_initialize.rs
