[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-client = "0.30.1"
anchor-lang = "0.30.1"
solana-sdk = "2.0.13"
getrandom = { version = "0.2.3", features = ["js", "wasm-bindgen"] }
solana-scm = { version = "0.1.0", path = "../programs/solana-scm" }
