[package]
name = "solana-scm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_scm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-client = "0.30.1"
solana-program = "2.0.13"
solana-sdk = "2.0.13"
getrandom = { version = "0.2.3", features = ["js", "wasm-bindgen"] }
